--- a/ht_6/styles/common.css
+++ b/ht_6/styles/common.css
@@ -1,40 +1,69 @@
-ul li {display: inline-block;
-width: 450px;
-height:500px;
-padding: 5px; 
-border: 3px;
-box-sizing:content-box;
-text-align: center;
+ul li {
+    display: inline-block;
+    width: 450px;
+    height: 500px;
+    padding: 5px;
+    border: 3px;
+    box-sizing: content-box;
+    text-align: center;
 }
-header nav {text-align:center;
-display: inline-block;
-width: 50px;
-font-size:20px;
+
+header nav {
+    text-align: center;
+    display: inline-block;
+    width: 50px;
+    font-size: 20px;
 }
-h3{text-align: center;
-font-size:50px;
-font-style: italic;}
-h4{text-align: center;
-font-size:50px;
-font-style: italic;}
-h5{text-align: center;
-font-size:50px;
-font-style: italic;}
-h1{text-align: center;
-color: rgba(245, 158, 8, 0.953);
-font-size: 100px;
-font-style: italic;}
-h2{text-align: left;
-color: rgb(248, 147, 14);
-font-style: italic;
-font-size:25px;}
-b {text-align: left;
-color: rgb(248, 37, 14);
-font-size:20px;}
-img {width: 450px;height:450px;
+
+h3 {
+    text-align: center;
+    font-size: 25px;
+    font-style: italic;
 }
-span {font-size: 20px;
-font-style: italic;
+
+h4 {
+    text-align: center;
+    font-size: 50px;
+    font-style: italic;
 }
-div p {font-size: 25px;
-font-weight: 700;}
+
+h5 {
+    text-align: center;
+    font-size: 50px;
+    font-style: italic;
+}
+
+h1 {
+    text-align: center;
+    color: rgba(245, 158, 8, 0.953);
+    font-size: 100px;
+    font-style: italic;
+}
+
+h2 {
+    text-align: left;
+    color: rgb(248, 147, 14);
+    font-style: italic;
+    font-size: 25px;
+}
+
+b {
+    text-align: left;
+    color: rgb(248, 37, 14);
+    font-size: 20px;
+}
+
+img {
+    width: 450px;
+    height: 450px;
+}
+
+span {
+    font-size: 20px;
+    font-style: italic;
+}
+
+div p {
+    font-size: 25px;
+    font-weight: 700;
+}
