--- a/ht_6/styles/common.css
+++ b/ht_6/styles/common.css
@@ -1,7 +1,6 @@
 ul li {
     display: inline-block;
     width: 450px;
-    height: 500px;
     padding: 5px;
     border: 3px;
     box-sizing: content-box;
@@ -11,26 +10,8 @@ ul li {
 header nav {
     text-align: center;
     display: inline-block;
-    width: 50px;
-    font-size: 20px;
-}
-
-h3 {
-    text-align: center;
-    font-size: 25px;
-    font-style: italic;
-}
-
-h4 {
-    text-align: center;
-    font-size: 50px;
-    font-style: italic;
-}
-
-h5 {
-    text-align: center;
-    font-size: 50px;
-    font-style: italic;
+    width: 150px;
+    font-size: 30px;
 }
 
 h1 {
@@ -41,14 +22,24 @@ h1 {
 }
 
 h2 {
-    text-align: left;
     color: rgb(248, 147, 14);
     font-style: italic;
     font-size: 25px;
 }
 
+h3,h5 {
+    text-align: center;
+    font-size: 50px;
+    font-style: italic;
+}
+
+h4,h6 {
+    text-align: center;
+    font-size: 25px;
+    font-style: italic;
+}
+
 b {
-    text-align: left;
     color: rgb(248, 37, 14);
     font-size: 20px;
 }
